# keycard-qt

./: .gitignore  CMakeLists.txt  INTEGRATION_GUIDE.md  QUICK_START.md  README.md
.github/workflows/: test.yml
cmake/: keycard-qt-config.cmake.in
docs/: API.md
examples/: CMakeLists.txt  README.md  advanced_operations_example.cpp  communication_manager_example.cpp  simple_detection.cpp
include/keycard-qt/: card_command.h  channel_interface.h  command_set.h  communication_manager.h  i_communication_manager.h  keycard_channel.h  metadata_utils.h  pairing_storage.h  secure_channel.h  tlv_utils.h  types.h  types_parser.h
include/keycard-qt/apdu/: command.h  response.h  utils.h
include/keycard-qt/backends/: keycard_channel_backend.h  keycard_channel_pcsc.h  keycard_channel_unified_qt_nfc.h
include/keycard-qt/globalplatform/: gp_command_set.h  gp_constants.h  gp_crypto.h  scp02_session.h  scp02_wrapper.h
include/keycard-qt/platform/: android_nfc_utils.h
include/keycard-qt/types/: application_info.h  application_status.h  pairing_info.h
ios/: Entitlements.plist
src/: card_command.cpp  command_set.cpp  communication_manager.cpp  i_communication_manager.cpp  metadata_utils.cpp  tlv_utils.cpp
src/apdu/: command.cpp  response.cpp  utils.cpp
src/channel/: keycard_channel.cpp
src/channel/backends/: keycard_channel_pcsc.cpp  keycard_channel_unified_qt_nfc.cpp
src/crypto/: secure_channel.cpp
src/globalplatform/: gp_command_set.cpp  gp_crypto.cpp  scp02_session.cpp  scp02_wrapper.cpp
src/types/: application_info.cpp  application_status.cpp  exported_key.cpp
tests/: CMakeLists.txt  test_apdu_command.cpp  test_apdu_response.cpp  test_apdu_utils.cpp  test_card_command.cpp  test_command_set_extended.cpp  test_command_set_new.cpp  test_communication_manager.cpp  test_communication_manager_queue.cpp  test_communication_manager_sync.cpp  test_communication_manager_threading.cpp  test_globalplatform_crypto.cpp  test_init_pair.cpp  test_keycard_channel.cpp  test_keycard_channel_di.cpp  test_pbkdf2.cpp  test_secure_channel.cpp  test_secure_channel_extended.cpp  test_types.cpp  test_types_extended.cpp
tests/mocks/: mock_backend.cpp  mock_backend.h
